# LLM_API_Distributor

./: Makefile  README.md
backend/: .coveragerc  .gitignore  Dockerfile  ENV_VARS.md  README.md  alembic.ini  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/core/: __init__.py  config.py  idempotency.py  logging.py  rate_limit.py  security.py
backend/app/db/: __init__.py  base.py  compat.py  models.py  session.py
backend/app/domain/: __init__.py  schemas.py
backend/app/exporters/: __init__.py  base.py  csv_exporter.py  jsonl_exporter.py  xlsx_exporter.py  xlsx_multi_sheet_exporter.py
backend/app/utils/: __init__.py  excel.py  hashing.py
backend/app/workers/: __init__.py  celery_app.py  tasks.py
backend/artefacts/: .gitkeep
backend/docs/: DELIVERY_RUNBOOK.md
backend/samples/: import.json
backend/scripts/: README.md  demo_multi.sh  demo_openai.sh  migrations_offline.sh  run_tests.sh
backend/tests/: README.md  conftest.py  pytest.ini
backend/tests/fixtures/: sample_questions.json
backend/tests/test_api/: __init__.py  test_campaigns.py  test_health.py
backend/tests/test_e2e/: test_api_runs.py  test_full_workflow.py
backend/tests/test_integration/: test_determinism.py  test_export_delivery_workflow.py  test_provider_validation.py  test_question_import.py  test_run_service.py  test_user_excel_export.py
backend/tests/test_unit/: test_cost_tracking.py  test_delivery_worker.py  test_gemini_perplexity_providers.py  (+5 more)
(+22 files in other folders)
